# aws-ai-ml-workshop-kr

./: .gitignore  CONTRIBUTING.md  README.md  Readme.md
.ipynb_checkpoints/: CONTRIBUTING-checkpoint.md  Readme-checkpoint.md
genai/aws-gen-ai-kr/13_agentcore/setup/: pyproject.toml
genai/aws-gen-ai-kr/13_agentcore/tutorials/01-AgentCore-runtime/01-hosting-agent/04-crewai-with-bedrock-model/: pyproject.toml  runtime-with-crewai-and-bedrock-models.ipynb
genai/aws-gen-ai-kr/13_agentcore/tutorials/01-AgentCore-runtime/01-hosting-agent/04-crewai-with-bedrock-model/research_crew/: requirements.txt
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/03_supply_chain_analysis_strands_sdk/setup/: create-opensearch.py  create-uv-env.sh  execution-os-mcp-server.sh  install-filescopemcp.sh  main.py  os_indexing.py  pyproject.toml  requirements.txt  shutdown.sh
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/03_supply_chain_analysis_strands_sdk/setup/data/: inventory_levels_data.txt  ira_compliance_data.txt  shipment_tracking_data.txt  supplier_performance_data.txt
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/04_basic_agent_frame/setup/: README.md  create-opensearch.sh  create-uv-env.sh  install-claude-code.sh  main.py  pyproject.toml  setup_opensearch_simple_kr.ipynb
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/05_insight_extractor_strands_sdk_agentcore/setup/: pyproject.toml
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/06_insight_extractor_strands_sdk_workshop_phase_1/setup/: create-uv-env.sh  pyproject.toml
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/06_insight_extractor_strands_sdk_workshop_phase_1/setup/aws-mcp-sandbox/aws-infrastructure/: cloudformation.yaml
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/06_insight_extractor_strands_sdk_workshop_phase_1/setup/aws-mcp-sandbox/aws-infrastructure/lambda/: session_manager.py
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/06_insight_extractor_strands_sdk_workshop_phase_1/setup/aws-mcp-sandbox/fargate-runtime/: Dockerfile  api.py  requirements.txt
genai/aws-gen-ai-kr/20_applications/08_bedrock_manus/use_cases/06_insight_extractor_strands_sdk_workshop_phase_1/setup/aws-mcp-sandbox/mcp-server/: .env.example  __init__.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/: .env  01_TBU.ipynb  Makefile  README.md  README_zh.md  main.ipynb  main.py  pre-commit  pyproject.toml  report.md  server.py  tbl_trend_analysis_desc_20250307.xlsx  todo.md
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/artifacts/: all_results.txt
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/data-pq/: tbl_trend_analysis_sample_0000_part_00.parquet  tbl_trend_analysis_sample_0001_part_00.parquet  tbl_trend_analysis_sample_0002_part_00.parquet  tbl_trend_analysis_sample_0003_part_00.parquet  tbl_trend_analysis_sample_0004_part_00.parquet  tbl_trend_analysis_sample_0005_part_00.parquet  tbl_trend_analysis_sample_0006_part_00.parquet  tbl_trend_analysis_sample_0007_part_00.parquet  tbl_trend_analysis_sample_0008_part_00.parquet  tbl_trend_analysis_sample_0009_part_00.parquet  tbl_trend_analysis_sample_0010_part_00.parquet  tbl_trend_analysis_sample_0011_part_00.parquet  tbl_trend_analysis_sample_0012_part_00.parquet  tbl_trend_analysis_sample_0013_part_00.parquet  tbl_trend_analysis_sample_0014_part_00.parquet  tbl_trend_analysis_sample_0015_part_00.parquet  tbl_trend_analysis_sample_0016_part_00.parquet  tbl_trend_analysis_sample_0017_part_00.parquet  tbl_trend_analysis_sample_0018_part_00.parquet  tbl_trend_analysis_sample_0019_part_00.parquet  tbl_trend_analysis_sample_0020_part_00.parquet  tbl_trend_analysis_sample_0021_part_00.parquet  tbl_trend_analysis_sample_0022_part_00.parquet  tbl_trend_analysis_sample_0023_part_00.parquet  tbl_trend_analysis_sample_0024_part_00.parquet  tbl_trend_analysis_sample_0025_part_00.parquet  tbl_trend_analysis_sample_0026_part_00.parquet  tbl_trend_analysis_sample_0027_part_00.parquet  tbl_trend_analysis_sample_0028_part_00.parquet  tbl_trend_analysis_sample_0029_part_00.parquet  tbl_trend_analysis_sample_0030_part_00.parquet  tbl_trend_analysis_sample_0031_part_00.parquet  tbl_trend_analysis_sample_0032_part_00.parquet  tbl_trend_analysis_sample_0033_part_00.parquet  tbl_trend_analysis_sample_0034_part_00.parquet  tbl_trend_analysis_sample_0035_part_00.parquet  tbl_trend_analysis_sample_0036_part_00.parquet  tbl_trend_analysis_sample_0037_part_00.parquet  tbl_trend_analysis_sample_0038_part_00.parquet  tbl_trend_analysis_sample_0039_part_00.parquet
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/dataset/: column_info.csv
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/dataset/data/: prdc_report_union.parquet
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/setup/: create_conda_virtual_env.sh  requirements.txt
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/: workflow.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/agents/: agents.py  llm.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/api/: __init__.py  app.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/config/: agents.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/graph/: builder.py  nodes.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/prompts/: coder.md  coordinator.md  planner.md  reporter.md  supervisor.md  task_tracker.md  template.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/tools/: __init__.py  bash_tool.py  decorators.py  python_repl.py  task_tracker_tool.py
genai/aws-gen-ai-kr/20_applications/08_insight_extraction/src/utils/: bedrock.py
genai/aws-gen-ai-kr/40_inference/08-roberta-sagemaker-inference/setup/: 00_install_uv.sh  01_setup_environment.sh  02_test_environment.sh  README.md  pyproject.toml  requirements.txt  run_all_setup.sh  setup.sh
genai/aws-gen-ai-kr/50_tool_repo/rag/setup/: create-uv-env.sh  pyproject.toml
(+3116 files in other folders)
