[project]
name = "env-bedrock-agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "env-bedrock-agentcore", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.39.9",
    "langchain>=0.3.26",
    "langgraph>=0.5.3",
    "strands-agents>=1.0.1",
    "bedrock-agentcore==0.1.1",
    "strands-agents-tools>=0.2.1",
    "mcp>=1.12.0",
    "streamlit==1.47.0",
    "requests-toolbelt>=1.0.0",
    "sagemaker>=2.248.1",
    "awscli>=1.41.10",
    "termcolor>=3.1.0",
    "langfuse>=3.2.1",
    "langchain-aws>=0.2.29",
    "bedrock-agentcore-starter-toolkit",
    "duckduckgo-search>=8.1.1",
    "aws-opentelemetry-distro>=0.10.1",
    "ddgs>=9.5.2",
]
