[project]
name = "env-bedrock-agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "env-bedrock-agentcore", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.39.9",
    "langchain>=0.3.26",
    "langgraph>=0.5.3",
    "strands-agents>=1.4.0",
    "bedrock-agentcore==0.1.2",
    "strands-agents-tools>=0.2.3",
    "mcp>=1.12.4",
    "streamlit==1.47.0",
    "requests-toolbelt>=1.0.0",
    "sagemaker>=2.250.0",
    "awscli>=1.42.7",
    "termcolor>=3.1.0",
    "langfuse>=3.2.1",
    "langchain-aws>=0.2.29",
    "bedrock-agentcore-starter-toolkit",
    "duckduckgo-search>=8.1.1",
    "aws-opentelemetry-distro>=0.10.1",
    "ddgs>=9.5.2",
]
