[project]
name = "klue-roberta-sagemaker-inference"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "torch==2.5.0",
    "transformers>=4.30.0",
    "numpy<2.0",
    "sagemaker>=2.251.0",
    "boto3",
    "protobuf<4.0.0",
    "ipykernel",
    "jupyter",
    "jupyterlab",
    "python-dotenv",
]