[project]
name = "supply-chain-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Dongjin Jang, Ph.D.", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "boto3==1.38.36",
    "langgraph==0.4.8",
    "langchain",
    "langchain-community==0.3.25",
    "langchain-experimental==0.3.4",
    "langchain-aws==0.2.25",
    "langfuse==2.60.3",
    "tavily-python==0.7.6",
    "python-dotenv==1.1.0",
    "termcolor==3.1.0",
    "matplotlib==3.10.1",
    "pillow==11.2.1",
    "jq==1.8.0",
    "bs4==0.0.2",
    "markdownify==1.1.0",
    "readabilipy==0.3.0",
    "pandas==2.3.0",
    "numpy==2.3.0",
    "yfinance==0.2.58",
    "socksio==1.0.0",
    "uvicorn==0.34.2",
    "sse-starlette==2.3.3",
    "langchain-deepseek==0.1.3",
    "playwright==1.52.0",
    "lovelyplots==1.0.2",
    "weasyprint==65.1",
    "streamlit==1.45.0",
    "strands-agents==0.1.7",
    "strands-agents-tools==0.1.5",
    "seaborn==0.13.2",
    "mcp==1.9.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
