[project]
name = "supply-chain-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "supply-chain-analysis", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.10"
dependencies = [
    "boto3==1.38.36",
    "opensearch-py>=2.0.0",
    "requests-aws4auth>=1.2.0",
    "langgraph==0.4.8",
    "langchain",
    "langchain-community==0.3.25",
    "langchain-experimental==0.3.4",
    "langfuse==2.60.3",
    "tavily-python==0.7.6",
    "python-dotenv==1.1.0",
    "termcolor==3.1.0",
    "langchain-deepseek==0.1.3",
    "matplotlib==3.10.1",
    "pillow==11.2.1",
    "pandas>2.0.0",
    "numpy>=2.0.0",
    "seaborn==0.13.2",
    "yfinance==0.2.58",
    "jq==1.8.0",
    "bs4==0.0.2",
    "markdownify==1.1.0",
    "readabilipy==0.3.0",
    "socksio==1.0.0",
    "uvicorn==0.34.2",
    "sse-starlette==2.3.3",
    "streamlit==1.45.0",
    "playwright==1.52.0",
    "weasyprint==65.1",
    "lovelyplots==1.0.2",
    "strands-agents==0.1.7",
    "strands-agents-tools==0.1.5",
    "mcp==1.9.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "opensearch-mcp>=0.0.1",
]
