[project]
name = "basic-agent-frame-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "basic-agent-frame", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3==1.39.9",
    "langchain==0.3.26",
    "langgraph==0.5.3",
    "strands-agents==1.0.1",
    "bedrock-agentcore==0.1.0",
    "strands-agents-tools==0.2.1",
    "mcp==1.12.0",
    "streamlit==1.47.0",
    "requests-toolbelt==1.0.0",
    "sagemaker==2.248.1",
    "awscli>=1.41.10",
    "termcolor==3.1.0",
    "langfuse==3.2.1",
    "langchain-aws==0.2.29",
    "pdf2image==1.17.0",
    "pillow>=10.0.0",
    "matplotlib==3.10.3",
]
