[project]
name = "basic-agent-frame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "basic-agent-frame", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.3.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.40.51",
    "awscli>=1.42.10",
    "langchain==1.0.2",
    "langgraph==1.0.1",
    "langchain-aws==1.0.0",
    "langchain-anthropic==1.0.0",
    "langchain-text-splitters>=0.3.0",
    "strands-agents==1.12.0",
    "bedrock-agentcore==1.0.4",
    "strands-agents-tools==0.2.12",
    "mcp==1.19.0",
    "streamlit==1.50.0",
    "requests-toolbelt==1.0.0",
    "termcolor==3.1.0",
    "pdf2image==1.17.0",
    "pillow>=10.0.0",
    "matplotlib==3.10.7",
    "opensearch-py==3.0.0",
    "transformers>=4.57.1",
    "langchain-community>=0.4",
]

