[project]
name = "bedrock-manus-agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "bedrock-manus-agentcore", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.40.10",
    "strands-agents==1.6.0",
    "strands-agents-tools==0.2.5",
    "bedrock-agentcore==0.1.2",
    "bedrock-agentcore-starter-toolkit==0.1.7",
    "mcp>=1.13.0",
    "streamlit==1.48.1",
    "requests-toolbelt>=1.0.0",
    "sagemaker>=2.250.0",
    "awscli>=1.42.10",
    "termcolor>=3.1.0",
    "aws-opentelemetry-distro>=0.11.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "lovelyplots>=1.0.2",
    "weasyprint>=66.0",
    "scikit-learn>=1.7.1",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "koreanize-matplotlib>=0.1.1",
    "pillow>=11.3.0",
]
