[project]
name = "bedrock-manus-agentcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "bedrock-manus-agentcore", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "boto3>=1.40.35",
    "strands-agents>=1.9.1",
    "mcp>=1.13.0",
    "streamlit==1.48.1",
    "requests-toolbelt>=1.0.0",
    "sagemaker>=2.251.1",
    "awscli>=1.42.10",
    "termcolor>=3.1.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "lovelyplots>=1.0.2",
    "weasyprint>=66.0",
    "scikit-learn>=1.7.1",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "koreanize-matplotlib>=0.1.1",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "reportlab>=4.4.3",
    "markdown>=3.9",
    "fpdf2>=2.8.4",
    "matplotlib-inline>=0.1.7",
    "strands-agents-tools==0.2.9",
]
