[project]
name = "deep-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Dongjin Jang", email = "dongjinj@amazon.com"}
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel==7.1.0",
    "jupyter==1.1.1",
    "boto3==1.40.69",
    "strands-agents==1.15.0",
    "strands-agents-tools==0.2.14",
    "mcp==1.21.0",
    "streamlit==1.51.0",
    "requests-toolbelt==1.0.0",
    "sagemaker==2.254.1",
    "awscli==1.42.69",
    "termcolor==3.2.0",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "lovelyplots>=1.0.2",
    "seaborn==0.13.2",
    "python-dotenv==1.2.1",
    "langchain==1.0.5",
    "weasyprint==66.0",
    "python-docx==1.2.0",
    "scikit-learn==1.7.2",
    "numpy>=1.26.4",
    "pandas==2.3.3",
    "koreanize-matplotlib>=0.1.1",
    "pillow>=11.2.1",
    "plotly==6.4.0",
    "reportlab==4.4.4",
    "markdown==3.10",
    "fpdf2==2.8.5",
]
